istio-teaching/release/whole/argo-vs-frontend-subset.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  gateways:
  - demo-01/frontend-gateway
  hosts:
  - "*"
  http:
  - name: http-primary
    route:
    - destination:
        host: frontend
        subset: v1
        port: 
          number: 80
      weight: 100
    - destination:
        host: frontend
        subset: v2
        port: 
          number: 80
      weight: 0
